--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
