--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     }
   },
   "dependencies": {
+    "@electron/remote": "^2.0.8",
     "axios": "^0.18.0",
     "element-ui": "^2.15.6",
     "fluent-ffmpeg": "^2.1.2",
@@ -76,7 +77,7 @@
     "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^11.1.1",
+    "electron": "^12.0.0",
     "electron-debug": "^3.2.0",
     "electron-devtools-installer": "^3.1.1",
     "electron-builder": "^22.9.1",
