完成demo展示组件

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "axios": "^0.18.0",
     "element-ui": "^2.15.6",
     "fluent-ffmpeg": "^2.1.2",
+    "font-list": "^1.4.5",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
